
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int memset (char*,int,int) ;

int cpystr(char* dest,int str,int len)
    {
      memset(dest,str,len+1);
      return len;
    }
